# periodic-word-solver

./: README.md  periodic_word_app.py  pyproject.toml
data/: periodic_table_elements.csv
src/: decompose_word.py  periodic_elements.py  solver.py
tests/end_to_end/: test_full_process.py
tests/unit/: test_solver.py
